fix scrollbar

--- a/src/views/tutorials-landing/components/cross-product-section/cross-product-section.module.css
+++ b/src/views/tutorials-landing/components/cross-product-section/cross-product-section.module.css
@@ -30,6 +30,7 @@
 }
 
 .list {
+	overflow-x: auto;
 	column-gap: 20px;
 	display: grid;
 	grid-template-columns: repeat(3, minmax(auto, 400px));
@@ -37,6 +38,10 @@
 	list-style: none;
 	margin: 0;
 	padding: 0;
+
+	&::-webkit-scrollbar {
+		display: none;
+	}
 
 	@media (--dev-dot-tablet-down) {
 		overflow-y: auto;
